+ variables, typography, fonts

--- a/wp-content/themes/zadanie/resources/assets/sass/fonts/_fonts.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/fonts/_fonts.scss
@@ -1,1 +1,31 @@
-//
+@font-face {
+  font-family: "Inter";
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/Inter-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-display: swap;
+  font-weight: 500;
+  font-style: italic;
+  src: url("../fonts/Inter-Medium-Italic.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/Montserrat-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-display: swap;
+  font-weight: 500;
+  font-style: normal;
+  src: url("../fonts/Montserrat-Medium.ttf") format("truetype");
+}
