--- a/wp-content/themes/zadanie/resources/assets/sass/settings/_variables.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/settings/_variables.scss
@@ -1,5 +1,7 @@
-$white: #fff;
-$black: #000;
+$primarycolor: #dcc1ab;
+$secondarycolor: #1b5b31;
+$beige: #f5f0ec;
+$dark: #111;
 
-$primaryfont: "Gilroy-Regular";
-$secondaryfont: "Gilroy-Medium";
+$primaryfont: "Inter", sans-serif;
+$secondaryfont: "Montserrat", sans-serif;
