--- a/wp-content/themes/zadanie/public/css/app.css
+++ b/wp-content/themes/zadanie/public/css/app.css
@@ -35,7 +35,7 @@
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
-  --bs-dark: #212529;
+  --bs-dark: #111;
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -43,7 +43,7 @@
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
-  --bs-dark-rgb: 33, 37, 41;
+  --bs-dark-rgb: 17, 17, 17;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
@@ -6410,17 +6410,45 @@ progress {
   .d-print-none {
     display: none !important; } }
 
+@font-face {
+  font-family: "Inter";
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/Inter-Regular.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "Inter";
+  font-display: swap;
+  font-weight: 500;
+  font-style: italic;
+  src: url("../fonts/Inter-Medium-Italic.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "Montserrat";
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/Montserrat-Regular.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "Montserrat";
+  font-display: swap;
+  font-weight: 500;
+  font-style: normal;
+  src: url("../fonts/Montserrat-Medium.ttf") format("truetype"); }
+
 body {
-  font-family: "Gilroy-Regular";
-  background: #fff;
-  color: #000;
+  font-family: "Inter", sans-serif;
+  background: #f5f0ec;
+  color: #111;
   margin: 0; }
 
 a {
-  color: #000;
+  color: #111;
   text-decoration: none; }
   a:hover {
-    color: #000; }
+    color: #111; }
   a:focus {
     outline: none; }
 
@@ -6455,3 +6483,53 @@ a {
 
 .h-100 {
   height: 100%; }
+
+h1,
+h2 {
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif; }
+
+h1 {
+  font-size: 3.75rem;
+  line-height: 4.375rem; }
+  @media (max-width: 767.98px) {
+    h1 {
+      font-size: 2.25rem;
+      line-height: 2.5rem; } }
+
+h2 {
+  font-size: 3rem; }
+  @media (max-width: 767.98px) {
+    h2 {
+      font-size: 1.875rem;
+      line-height: 2.375rem; } }
+
+h3 {
+  font-size: 2.5rem; }
+  @media (max-width: 767.98px) {
+    h3 {
+      font-size: 1.625rem;
+      line-height: 2.375rem; } }
+
+h4 {
+  font-size: 1.75rem; }
+  @media (max-width: 767.98px) {
+    h4 {
+      font-size: 1.5rem;
+      line-height: 2rem; } }
+
+p {
+  font-size: 1rem;
+  line-height: 1.5rem; }
+  @media (max-width: 767.98px) {
+    p {
+      font-size: 0.875rem;
+      line-height: 1.25rem; } }
+
+a {
+  font-size: 0.875rem;
+  line-height: 1.25rem; }
+  @media (max-width: 767.98px) {
+    a {
+      font-size: 0.75rem;
+      line-height: 1rem; } }
