--- a/wp-content/themes/zadanie/resources/assets/sass/app.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/app.scss
@@ -8,6 +8,8 @@
 @import "../node_modules/bootstrap/scss/mixins/deprecate";
 @import "../node_modules/bootstrap/scss/mixins/text-truncate";
 @import "../node_modules/bootstrap/scss/mixins/reset-text";
+@import "../node_modules/bootstrap/scss/utilities";
+@import "../node_modules/bootstrap/scss/utilities/api";
 
 // Fonts
 // =================================================
