--- a/wp-content/themes/zadanie/resources/assets/sass/app.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/app.scss
@@ -9,6 +9,8 @@
 @import "../node_modules/bootstrap/scss/mixins/text-truncate";
 @import "../node_modules/bootstrap/scss/mixins/reset-text";
 @import "../node_modules/bootstrap/scss/carousel";
+@import "../node_modules/bootstrap/scss/utilities/background";
+@import "../node_modules/bootstrap/scss/utilities/text";
 
 // Fonts
 // =================================================
