--- a/wp-content/themes/zadanie/resources/assets/sass/components/_buttons.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/components/_buttons.scss
@@ -1,1 +1,22 @@
-//
+.btn {
+  border-radius: 12.5rem;
+  transition: 0.2s;
+
+  @include fontSize(16);
+
+  &-primary {
+    background-color: $secondarycolor;
+    padding: 0.75rem 1.5rem 0.875rem;
+  }
+
+  &-outline {
+    border: 1px solid $secondarycolor;
+    color: $secondarycolor;
+    padding: 0.75rem 1.375rem 0.875rem;
+
+    &:hover {
+      color: $white;
+      background-color: $secondarycolor;
+    }
+  }
+}
