--- a/wp-content/themes/zadanie/resources/assets/sass/fonts/_fonts.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/fonts/_fonts.scss
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: "Inter";
+  font-family: "Inter Medium Italic";
   font-display: swap;
   font-weight: 500;
   font-style: italic;
