--- a/wp-content/themes/zadanie/resources/assets/sass/settings/_variables.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/settings/_variables.scss
@@ -5,3 +5,4 @@ $dark: #111;
 
 $primaryfont: "Inter", sans-serif;
 $secondaryfont: "Montserrat", sans-serif;
+$italicfont: "Inter Medium Italic", sans-serif;
