--- a/wp-content/themes/zadanie/resources/assets/sass/components/_buttons.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/components/_buttons.scss
@@ -4,6 +4,10 @@
 
   @include fontSize(16);
 
+  &:hover {
+    text-decoration: none;
+  }
+
   &-primary {
     background-color: $secondarycolor;
     padding: 0.75rem 1.5rem 0.875rem;
