--- a/wp-content/themes/zadanie/resources/assets/sass/app.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/app.scss
@@ -13,6 +13,7 @@
 @import "../node_modules/bootstrap/scss/utilities/background";
 @import "../node_modules/bootstrap/scss/utilities/text";
 @import "../node_modules/bootstrap/scss/utilities/borders";
+@import "../node_modules/bootstrap/scss/utilities/overflow";
 @import "../node_modules/bootstrap/scss/grid";
 
 // Fonts
@@ -35,6 +36,7 @@
 @import "components/hero";
 @import "components/buttons";
 @import "components/box";
+@import "components/slider";
 
 // Sections
 // =================================================
