--- a/wp-content/themes/zadanie/resources/assets/sass/components/_buttons.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/components/_buttons.scss
@@ -11,6 +11,12 @@
   &-primary {
     background-color: $secondarycolor;
     padding: 0.75rem 1.5rem 0.875rem;
+
+    &:hover {
+      color: $secondarycolor;
+      background-color: transparent;
+      border: 1px solid $secondarycolor;
+    }
   }
 
   &-outline {
