--- a/wp-content/themes/zadanie/resources/assets/sass/components/_hero.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/components/_hero.scss
@@ -1,24 +1,43 @@
 .hero {
   .carousel,
   & {
-    @include media-breakpoint-up(xl) {
+    @include media-breakpoint-up(lg) {
       min-height: 737px;
+    }
+
+    @include media-breakpoint-only(md) {
+      min-height: 462px;
     }
   }
 
   &__text {
-    padding-top: 9rem;
-    padding-right: 5rem;
-    padding-bottom: 9rem;
+    padding: 3rem 1rem 3rem 0;
+
+    @include media-breakpoint-up(xl) {
+      padding: 9rem 5rem 9rem 2rem;
+    }
 
     p {
-      margin: 2.9rem 3rem 4.4rem 0;
       letter-spacing: 0;
+      margin: 1.5rem 0;
+
+      @include media-breakpoint-up(lg) {
+        margin: 2.9rem 3rem 4.4rem 0;
+      }
     }
   }
 
-  img {
+  &__image {
     max-height: 737px;
     object-fit: cover;
+    max-width: 100%;
+
+    @include media-breakpoint-only(md) {
+      max-height: 462px;
+    }
+
+    @include media-breakpoint-down(sm) {
+      height: auto;
+    }
   }
 }
