--- a/wp-content/themes/zadanie/resources/assets/sass/generic/_general.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/generic/_general.scss
@@ -71,3 +71,11 @@ a {
 .bg-green {
   background-color: $secondarycolor;
 }
+
+.title {
+  color: $secondarycolor;
+  margin-bottom: 0.5rem;
+  display: block;
+
+  @include fontSize(12);
+}
