--- a/wp-content/themes/zadanie/resources/assets/sass/settings/_bootstrap-override.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/settings/_bootstrap-override.scss
@@ -15,7 +15,8 @@ $spacers: (
   8rem: ($spacer * 6),
   9: ($spacer * 6.5),
   10: ($spacer * 7),
-  11: ($spacer * 7.5)
+  11: ($spacer * 7.5),
+  12: ($spacer * 10.2)
 );
 
 $grid-breakpoints: (
