--- a/wp-content/themes/zadanie/resources/assets/sass/components/_hero.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/components/_hero.scss
@@ -13,7 +13,7 @@
   &__text {
     padding: 3rem 1rem 3rem 0;
 
-    @include media-breakpoint-up(xl) {
+    @include media-breakpoint-up(xxl) {
       padding: 9rem 5rem 9rem 2rem;
     }
 
@@ -29,15 +29,9 @@
 
   &__image {
     max-height: 737px;
-    object-fit: cover;
-    max-width: 100%;
 
     @include media-breakpoint-only(md) {
       max-height: 462px;
-    }
-
-    @include media-breakpoint-down(sm) {
-      height: auto;
     }
   }
 }
