--- a/wp-content/themes/zadanie/public/css/app.css
+++ b/wp-content/themes/zadanie/public/css/app.css
@@ -7938,7 +7938,8 @@ h3 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   letter-spacing: -2px;
-  font-size: 2.5rem; }
+  font-size: 2.5rem;
+  line-height: 3rem; }
   @media (max-width: 991.98px) {
     h3 {
       font-size: 1.625rem;
