--- a/wp-content/themes/zadanie/resources/assets/sass/partials/_header.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/partials/_header.scss
@@ -5,12 +5,31 @@ nav {
 
   .sub-menu {
     list-style: none;
-    padding: 0;
+    position: absolute;
+    z-index: 2;
     background-color: $white;
     display: none;
+    left: -1rem;
+    padding: 1.5rem 1rem;
+    min-width: 14rem;
 
     li {
       margin-bottom: 0.5rem;
+    }
+  }
+
+  .menu-item-has-children {
+    position: relative;
+    margin-right: 4rem !important;
+
+    &::after {
+      content: "";
+      background: url("../images/icons/arrow-down.svg") no-repeat;
+      position: absolute;
+      width: 12px;
+      height: 12px;
+      right: -1rem;
+      top: 0.5rem;
     }
   }
 }
