--- a/wp-content/themes/zadanie/resources/assets/sass/app.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/app.scss
@@ -37,6 +37,8 @@
 @import "components/box";
 @import "components/slider";
 @import "components/animation";
+@import "components/search";
+@import "components/hamburger";
 
 // Sections
 // =================================================
