+ gallery show more

--- a/wp-content/themes/zadanie/resources/assets/sass/app.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/app.scss
@@ -44,3 +44,4 @@
 // =================================================
 @import "sections/offer.scss";
 @import "sections/about";
+@import "sections/gallery";
