--- a/wp-content/themes/zadanie/public/css/app.css
+++ b/wp-content/themes/zadanie/public/css/app.css
@@ -8165,6 +8165,17 @@ nav .menu-item-has-children {
   .btn-green:hover {
     background-color: #fff;
     color: #1b5b31; }
+  .btn-load-more {
+    border: 1px solid #111;
+    padding: 0.75rem 1.438rem;
+    left: 0;
+    right: 0;
+    bottom: 89px;
+    z-index: 12; }
+    .btn-load-more svg {
+      margin: -5px 0 3px 4px;
+      -webkit-animation: moveDown 1s ease-in-out infinite;
+      animation: moveDown 1s ease-in-out infinite; }
 
 .box-fluid .left-box,
 .box-fluid .right-box {
@@ -8246,6 +8257,24 @@ nav .menu-item-has-children {
   50% {
     -webkit-transform: translate(10px, 0);
     transform: translate(10px, 0); } }
+
+@-webkit-keyframes moveDown {
+  0%,
+  100% {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0); }
+  50% {
+    -webkit-transform: translate(0, 5px);
+    transform: translate(0, 5px); } }
+
+@keyframes moveDown {
+  0%,
+  100% {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0); }
+  50% {
+    -webkit-transform: translate(0, 5px);
+    transform: translate(0, 5px); } }
 
 input {
   border-bottom: 1px solid #111;
@@ -8384,3 +8413,22 @@ input {
         padding: 3rem 1rem 3rem 0; } }
     .about__content p {
       margin: 2.5rem 1.875rem 4.56rem 0; }
+
+.gallery__wrapper {
+  max-height: 1650px; }
+  .gallery__wrapper::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    background: -webkit-gradient(linear, left bottom, left top, from(#dcc1ab), to(rgba(214, 183, 158, 0)));
+    background: -webkit-linear-gradient(bottom, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
+    background: -o-linear-gradient(bottom, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
+    background: linear-gradient(360deg, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
+    z-index: 10; }
+  .gallery__wrapper--more {
+    max-height: 100%; }
+    .gallery__wrapper--more::before {
+      background: transparent; }
