--- a/wp-content/themes/zadanie/resources/assets/sass/components/_animation.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/components/_animation.scss
@@ -12,3 +12,15 @@
     transform: translate(10px, 0);
   }
 }
+
+@keyframes moveDown {
+
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+
+  50% {
+    transform: translate(0, 5px);
+  }
+}
