--- a/wp-content/themes/zadanie/public/css/app.css
+++ b/wp-content/themes/zadanie/public/css/app.css
@@ -8168,10 +8168,20 @@ nav .menu-item-has-children {
   .btn-load-more {
     border: 1px solid #111;
     padding: 0.75rem 1.438rem;
-    left: 0;
-    right: 0;
-    bottom: 89px;
-    z-index: 12; }
+    z-index: 12;
+    position: absolute; }
+    @media (min-width: 768px) {
+      .btn-load-more {
+        left: 0;
+        right: 0;
+        bottom: 89px; } }
+    @media (max-width: 767.98px) {
+      .btn-load-more {
+        position: relative;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%); } }
     .btn-load-more svg {
       margin: -5px 0 3px 4px;
       -webkit-animation: moveDown 1s ease-in-out infinite;
@@ -8416,18 +8426,22 @@ input {
 
 .gallery__wrapper {
   max-height: 1650px; }
-  .gallery__wrapper::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    bottom: 0;
-    left: 0;
-    background: -webkit-gradient(linear, left bottom, left top, from(#dcc1ab), to(rgba(214, 183, 158, 0)));
-    background: -webkit-linear-gradient(bottom, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
-    background: -o-linear-gradient(bottom, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
-    background: linear-gradient(360deg, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
-    z-index: 10; }
+  @media (max-width: 767.98px) {
+    .gallery__wrapper {
+      max-height: 1480px; } }
+  @media (min-width: 768px) {
+    .gallery__wrapper::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      bottom: 0;
+      left: 0;
+      background: -webkit-gradient(linear, left bottom, left top, from(#dcc1ab), to(rgba(214, 183, 158, 0)));
+      background: -webkit-linear-gradient(bottom, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
+      background: -o-linear-gradient(bottom, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
+      background: linear-gradient(360deg, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
+      z-index: 10; } }
   .gallery__wrapper--more {
     max-height: 100%; }
     .gallery__wrapper--more::before {
