--- a/wp-content/themes/zadanie/resources/assets/sass/components/_buttons.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/components/_buttons.scss
@@ -66,10 +66,20 @@
   &-load-more {
     border: 1px solid $dark;
     padding: 0.75rem 1.438rem;
-    left: 0;
-    right: 0;
-    bottom: 89px;
     z-index: 12;
+    position: absolute;
+
+    @include media-breakpoint-up(md) {
+      left: 0;
+      right: 0;
+      bottom: 89px;
+    }
+
+    @include media-breakpoint-down(sm) {
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+    }
 
     svg {
       margin: -5px 0 3px 4px;
