--- a/wp-content/themes/zadanie/resources/assets/sass/sections/_gallery.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/sections/_gallery.scss
@@ -1,15 +1,21 @@
 .gallery__wrapper {
   max-height: 1650px;
 
-  &::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    bottom: 0;
-    left: 0;
-    background: linear-gradient(360deg, $primarycolor 0%, rgba(214, 183, 158, 0) 100%);
-    z-index: 10;
+  @include media-breakpoint-down(sm) {
+    max-height: 1480px;
+  }
+
+  @include media-breakpoint-up(md) {
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      bottom: 0;
+      left: 0;
+      background: linear-gradient(360deg, $primarycolor 0%, rgba(214, 183, 158, 0) 100%);
+      z-index: 10;
+    }
   }
 
   &--more {
