--- a/wp-content/themes/zadanie/resources/assets/sass/sections/_gallery.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/sections/_gallery.scss
@@ -22,7 +22,8 @@
     max-height: 100%;
 
     &::before {
-      background: transparent;
+      background: none;
+      z-index: 0;
     }
   }
 }
