--- a/wp-content/themes/zadanie/resources/assets/sass/app.scss
+++ b/wp-content/themes/zadanie/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@
 @import "../node_modules/bootstrap/scss/mixins/reset-text";
 @import "../node_modules/bootstrap/scss/mixins/grid";
 @import "../node_modules/bootstrap/scss/carousel";
+@import "../node_modules/bootstrap/scss/modal";
 @import "../node_modules/bootstrap/scss/utilities/background";
 @import "../node_modules/bootstrap/scss/utilities/text";
 @import "../node_modules/bootstrap/scss/utilities/borders";
@@ -39,6 +40,7 @@
 @import "components/animation";
 @import "components/search";
 @import "components/hamburger";
+@import "components/modal";
 
 // Sections
 // =================================================
